--- a/apps/notifications/src/mail/templates/hourly-forecast.hbs
+++ b/apps/notifications/src/mail/templates/hourly-forecast.hbs
@@ -44,7 +44,7 @@
         <p><span class="label">Feels Like:</span> {{feelsLikeTemp}}°C</p>
         <p><span class="label">Description:</span> {{description}}</p>
         <p><span class="label">Humidity:</span> {{humidity}}%</p>
-        <p><span class="label">Chance of Rain:</span> {{chance_of_rain}}%</p>
+        <p><span class="label">Chance of Rain:</span> {{chanceOfRain}}%</p>
     </div>
 
     <div class="footer">
